Fixed badges and labels in dark mode

--- a/public/css/overrides.css
+++ b/public/css/overrides.css
@@ -1,9 +1,4 @@
-.label-base {
-border: 1px solid #2e6da4;
-border-radius: 3px;
-color:#2e6da4
 
-}
 
 .ticketbadge {border:1px solid grey; border-radius: 5px; margin-right:15px; white-space: nowrap;}
 
